force-app/main/default/objects/CampaignTargetAudience__c/CampaignTargetAudience__c.object-meta.xml
<CustomObject>
    <description>Este objeto irá armazenar as configurações de Cluster, Escritório, Organização e Equipe de Vendas da campanha, o objeto foi criado com o intuito de permitir que uma campanha seja utilizada em mais de entidade.</description>
    
    <label>Público-alvo da Campanha</label>
    <nameField>
        <displayFormat>P.ALVO-{00000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Público-alvo das Campanhas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>