force-app/main/default/objects/CampaignTargetAudience__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Público-alvo da Campanha</relationshipLabel>
    <relationshipName>Publico_alvo_da_Campanha</relationshipName>
    <type>Lookup</type>
</CustomField>