force-app/main/default/objects/CampaignTargetAudience__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campanha</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Publico_Alvo_das_Campanhas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>