force-app/main/default/objects/CampaignTargetAudience__c/fields/CampaignIsActive__c.field-meta.xml
<CustomField>
    <fullName>CampaignIsActive__c</fullName>
    <formula>Campaign__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campanha ativa?</label>
    <type>Checkbox</type>
</CustomField>