force-app/main/default/objects/CampaignTargetAudience__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cluster</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipName>Publico_Alvo_das_Campanhas</relationshipName>
    <type>Lookup</type>
</CustomField>