force-app/main/default/objects/CampaignTargetAudience__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipLabel>Público-alvo das Campanhas</relationshipLabel>
    <relationshipName>P_blico_alvo_das_Campanhas</relationshipName>
    <type>Lookup</type>
</CustomField>