force-app/main/default/objects/CampaignTargetAudience__c/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escritório de Vendas</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>SalesOffice__c.ParentId__c</field>
            <operation>equals</operation>
            <valueField>$Source.Cluster__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Cluster__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SalesOffice__c</referenceTo>
    <relationshipLabel>Público-alvo das Campanhas</relationshipLabel>
    <relationshipName>Publico_Alvo_das_Campanhas</relationshipName>
    <type>Lookup</type>
</CustomField>