force-app/main/default/objects/CampaignTargetAudience__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organização de Vendas</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipName>Publico_Alvo_das_Campanhas</relationshipName>
    <type>Lookup</type>
</CustomField>